--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@ body, html {
   margin: 0;
   padding: 0;
   background-color: steelblue;
+  font-family: 'Roboto', sans-serif;
+}
+
+button{
+  font-family: inherit;
 }
 
 .modal {
