--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,15 @@
-body, html {
+* {
+  box-sizing: border-box;
+}
+
+body,
+html {
   margin: 0;
   padding: 0;
-  background-color: steelblue;
   font-family: 'Roboto', sans-serif;
 }
 
-button{
+button {
   font-family: inherit;
 }
 
@@ -18,7 +22,7 @@ button{
   position: fixed;
   border-radius: 3px;
   transform: translate(-50%, -50%);
-  background: rgb(236, 233, 233);    
+  background: rgb(236, 233, 233);
 }
 
 .modal-overlay {
@@ -26,10 +30,10 @@ button{
   left: 0;
   right: 0;
   bottom: 0;
-  position: fixed;    
+  position: fixed;
   background-color: rgba(0, 0, 0, 0.25);
 }
 
-.modal-no-overlay{
+.modal-no-overlay {
   background-color: transparent;
 }
