--- a/src/css/common.css
+++ b/src/css/common.css
@@ -191,14 +191,56 @@
     background-color: #619B8A33;
 }
 
-.form-footer{
+.form-footer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     margin: 8px 0;
 }
 
-.link{
+.link {
     color: var(--color-primary-green);
     text-decoration: none;
+}
+
+
+/* -------------------------------------------------------------------------- */
+/*                                 Brand Logo                                */
+/* -------------------------------------------------------------------------- */
+
+.brand-logo {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+}
+
+.brand-logo .bg-map {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.brand-logo .overlay {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(90deg, rgba(102, 159, 137, 0.8) 50%, rgba(159, 193, 129, 0.8) 128%);
+    box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.15);
+}
+
+.brand-logo .logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
+
+.brand-logo .logo-top {
+    width: 200px;
+    transform: translateY(-110%) translateX(-50%);
+}
+
+.brand-logo .logo-bottom {
+    width: 180px;
+    transform: translateY(-15%) translateX(-50%);
 }
