--- a/src/css/common.css
+++ b/src/css/common.css
@@ -182,13 +182,19 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.42);
     border-radius: 4px;
     margin: 8px 0;
-    padding: 0 8px;
+    padding: 0 12px;
 }
 
 .form input:focus {
     border-color: var(--color-primary-green);
     outline: 0;
     background-color: #619B8A33;
+}
+
+.form .input-border {
+    border: 1px solid rgba(0, 0, 0, 0.23);
+    border-radius: 4px;
+    height: 46px;
 }
 
 .form-footer {
@@ -232,7 +238,7 @@
 .brand-logo .logo {
     position: absolute;
     top: 50%;
-    left: 50%; 
+    left: 50%;
 }
 
 .brand-logo .logo-top {
