--- a/src/css/common.css
+++ b/src/css/common.css
@@ -91,10 +91,11 @@
 /* -------------------------------------------------------------------------- */
 
 .btn {
+    height: 40px;
+    border: 0;
     border-radius: 4px;
-    margin: 16px 0;
+    margin: 8px 0;
     box-shadow: none;
-    border-bottom: none !important;
     text-transform: uppercase;
     font-family: inherit;
     font-weight: 400;
@@ -108,6 +109,7 @@
 }
 
 .btn-outline {
+    background-color: transparent;
     border: 1px solid var(--color-primary-green);
     color: var(--color-primary-green);
 }
@@ -185,6 +187,11 @@
     padding: 0 12px;
 }
 
+.form input .btn {
+    margin: 16px 0;
+    border-bottom: none !important;
+}
+
 .form input:focus {
     border-color: var(--color-primary-green);
     outline: 0;
@@ -193,7 +200,7 @@
 
 .form .input-border {
     border: 1px solid rgba(0, 0, 0, 0.23);
-    border-radius: 4px; 
+    border-radius: 4px;
     height: 46px;
 }
 
