--- a/src/css/components/Header.css
+++ b/src/css/components/Header.css
@@ -26,24 +26,31 @@
     font-size: 26px;
 }
 
+
+@media screen and (min-width:601px) {
+    .header {
+        box-shadow: none;
+    }
+}
+
 /* -------------------------------------------------------------------------- */
 /*                                  side nav                                  */
 /* -------------------------------------------------------------------------- */
 
 .side-nav {
-    position: absolute; 
+    position: absolute;
     top: 0;
     left: 0;
     background-color: #fff;
     height: 100vh;
     width: 100vw;
-    z-index: 99; 
+    z-index: 99;
     padding: 0 35px;
     transform: translateX(-100%);
     transition: 0.5s ease;
 }
 
-.side-nav.open{
+.side-nav.open {
     transform: translateX(0);
 }
 
