--- a/src/css/common.css
+++ b/src/css/common.css
@@ -72,6 +72,10 @@
     margin: 8px 0;
 }
 
+.text-center {
+    text-align: center;
+}
+
 .text-small {
     font-size: 16px;
 }
@@ -175,6 +179,14 @@
     height: 100vh;
 }
 
+@media (min-width: 601px){
+    .container{
+        max-width: 1204px;
+        margin: 0 auto;
+    }
+}
+
+
 /* -------------------------------------------------------------------------- */
 /*                                    forms                                   */
 /* -------------------------------------------------------------------------- */
@@ -263,7 +275,8 @@
 .header4,
 .header5,
 .btn {
-    margin: 24px 0;
+    margin: 24px auto;
+    max-width: 600px;
 }
 
 
