--- a/src/css/pages/LandingPage.css
+++ b/src/css/pages/LandingPage.css
@@ -17,6 +17,30 @@
     margin: 18px 0;
 }
 
+@media (min-width: 601px) {
+    .section.explore .header4 {
+        font-weight: 500;
+    }
+
+    .section.explore {
+        height: 434px;
+        text-align: left;
+        position: relative;
+    }
+
+    .section.explore .world-map {
+        position: absolute;
+        left: 25%;
+        top: 0;
+        z-index: -1;
+        width: 100%;
+        height: 100%;
+    }
+
+    .img-list-container .img-item {
+        padding: 0 9px;
+    }
+}
 
 
 /* -------------------------------------------------------------------------- */
@@ -56,4 +80,11 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+@media (min-width:601px) {
+    .img-locked {
+        max-width: 420px;
+        height: 235px;
+    }
 }
