--- a/src/css/common.css
+++ b/src/css/common.css
@@ -179,8 +179,8 @@
     height: 100vh;
 }
 
-@media (min-width: 601px){
-    .container{
+@media (min-width: 601px) {
+    .container {
         max-width: 1204px;
         margin: 0 auto;
     }
@@ -321,4 +321,20 @@
 .brand-logo .logo-bottom {
     width: 180px;
     transform: translateY(-15%) translateX(-50%);
+}
+
+
+/* -------------------------------------------------------------------------- */
+/*                               location image                               */
+/* -------------------------------------------------------------------------- */
+
+.location-img-container:hover {
+    opacity: 0.8;
+}
+
+.location-img-container img {
+    width: 100%;
+    height: 193px;
+    filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
 }
