--- a/src/css/common.css
+++ b/src/css/common.css
@@ -328,6 +328,12 @@
 /*                               location image                               */
 /* -------------------------------------------------------------------------- */
 
+.location-img-container {
+    position: relative;
+    border-radius: 4px;
+    overflow: hidden;
+}
+
 .location-img-container:hover {
     opacity: 0.8;
 }
@@ -337,4 +343,53 @@
     height: 193px;
     filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
+}
+
+
+.location-img-guess .img-overlay {
+    background: linear-gradient(90deg, rgba(102, 159, 137, 0.6) 50%, rgba(159, 193, 129, 0.6) 128%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.location-img-guess .img-overlay-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    color: #fff;
+
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 36px;
+}
+
+.horizontal-img-container {
+    height: 100vw;
+    overflow-y: auto;
+    overflow-x: hidden;
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+
+    padding-top: calc(3* 33px);
+    margin: -25px 0 -100px;
+    transform: rotate(-90deg) translateY(calc(-100vw + 33px));
+    transform-origin: right top;
+}
+
+.horizontal-img-container::-webkit-scrollbar {
+    display: none;
+}
+
+.horizontal-img-container .img-item {
+    width: calc(100vw - 2 * 33px);
+    margin-bottom: 135px;
+    transform: rotate(90deg);
 }
