--- a/src/css/common.css
+++ b/src/css/common.css
@@ -108,7 +108,7 @@
     height: 40px;
     width: 137px;
     margin: 8px 0;
-
+    padding: 0 33px;
     border: 0;
     border-radius: 4px;
     box-shadow: none;
@@ -198,14 +198,22 @@
 }
 
 .form label {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 14px;
     margin-top: 8px;
 }
 
 .form input {
+    margin: 8px 0;
+    padding: 0 12px;
+}
+
+label {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+}
+
+input {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
@@ -215,22 +223,25 @@
     border: 0;
     border-bottom: 1px solid rgba(0, 0, 0, 0.42);
     border-radius: 4px;
-    margin: 8px 0;
-    padding: 0 12px;
 }
 
-.form input.btn {
+input.btn {
     margin: 16px 0;
     border-bottom: none !important;
 }
 
-.form input:focus {
+input:focus {
     border-color: var(--color-primary-green);
     outline: 0;
     background-color: #619B8A33;
 }
 
-.form .input-border {
+.input {
+    width: 100%;
+    padding: 16px 12px;
+}
+
+.input-border {
     border: 1px solid rgba(0, 0, 0, 0.23);
     border-radius: 4px;
     height: 46px;
@@ -281,13 +292,13 @@
 }
 
 @media (min-width:601px) {
-    
+
     .section .body,
     .header3,
     .header4,
     .header5,
     .btn {
-        margin: 12px auto;
+        margin: 24px auto;
     }
 }
 
