--- a/src/css/components/common/MapComponent.css
+++ b/src/css/components/common/MapComponent.css
@@ -7,7 +7,7 @@
     position: relative;
 }
 
-.map-container::before{
+/* .map-container::before{
     content: '';
     display: block;
     position: absolute;
@@ -16,7 +16,7 @@
     width: 100%;
     height: 100%;
     z-index: 99;
-}
+} */
 
 @media (min-width: 601px) {
     .map-container {
