layout user profile page on desktop

--- a/src/css/pages/UserProfilePage.css
+++ b/src/css/pages/UserProfilePage.css
@@ -13,3 +13,9 @@
  .user-profile .best-guesses{
      margin-top: 48px;
  }
+
+ .best-guesses .location-img-container{
+     max-width: 310px;
+ }
+
+  
