add implementation of edit location image

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -165,6 +165,35 @@
     opacity: 0.5;
 }
 
+.btn-edit {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: auto;
+    width: 40px;
+    height: 40px;
+    margin: 0;
+    padding: 0;
+
+    color: #fff;
+    background-color: var(--color-primary-green);
+}
+
+.btn-cancel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    min-width: auto;
+    width: 40px;
+    height: 40px;
+    padding: 0;
+    margin: 0;
+
+    color: #fff;
+    background: #9B6161;
+}
+
 /* -------------------------------------------------------------------------- */
 /*                                  container                                 */
 /* -------------------------------------------------------------------------- */
@@ -282,26 +311,6 @@ input:focus {
     margin: 48px 0
 }
 
-.section .body,
-.header3,
-.header4,
-.header5,
-.btn {
-    margin: 24px auto;
-    max-width: 600px;
-}
-
-@media (min-width:601px) {
-
-    .section .body,
-    .header3,
-    .header4,
-    .header5,
-    .btn {
-        margin: 24px auto;
-    }
-}
-
 /* -------------------------------------------------------------------------- */
 /*                                 Brand Logo                                */
 /* -------------------------------------------------------------------------- */
@@ -389,6 +398,24 @@ input:focus {
     font-weight: 700;
     font-size: 24px;
     line-height: 36px;
+}
+
+.location-img-container.editable .btn-cancel {
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    z-index: 2;
+}
+
+.location-img-container.editable .btn-edit {
+    position: absolute;
+    top: 12px;
+    left: 12px;
+    z-index: 2;
+}
+
+.location-img-container.no-hover {
+    opacity: 1 !important;
 }
 
 /* -------------------------- horizontal image list ------------------------- */
