--- a/src/css/common.css
+++ b/src/css/common.css
@@ -370,8 +370,12 @@ input:focus {
     overflow: hidden;
 }
 
-.location-img-container:hover {
+.location-img-container:not(.no-interact):hover {
     opacity: 0.8;
+}
+
+.location-img-container.no-interact a{
+    cursor: default;
 }
 
 .location-img-container img {
@@ -379,6 +383,7 @@ input:focus {
     height: 193px;
     filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
+    object-fit: cover;
 }
 
 
