--- a/src/css/components/Header.css
+++ b/src/css/components/Header.css
@@ -1,7 +1,7 @@
 .header {
-    height: 96px;
+    height: 120px;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.15);
-    padding: 0 35px;
+    padding: 0 70px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -94,9 +94,11 @@
 /*                                  side nav                                  */
 /* -------------------------------------------------------------------------- */
 
-body.no-scroll{
-    height: 100vh;
-    overflow-y: hidden;
+@media (max-width:601px) {
+    body.no-scroll {
+        height: 100vh;
+        overflow-y: hidden;
+    }
 }
 
 .side-nav {
@@ -155,7 +157,7 @@ body.no-scroll{
     font-size: 28px;
 }
 
-.nav-items-list .nav-item:active{
+.nav-items-list .nav-item:active {
     background-color: #4a4a4a99;
 }
 
