--- a/src/css/common.css
+++ b/src/css/common.css
@@ -208,10 +208,10 @@
 }
 
 .container-center {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    justify-content: center;
-    height: 100vh;
+    justify-content: center; */
+    /* height: 100vh; */
 }
 
 @media (min-width: 601px) {
