fix image height on use profile page

--- a/src/css/pages/GuessLocationPage.css
+++ b/src/css/pages/GuessLocationPage.css
@@ -9,7 +9,7 @@
         margin-right: 24px;
     }
 
-    .location-img-container img{
+    .guess-location .location-img-container img{
         height: 324px;
     }
 
