--- a/src/css/common.css
+++ b/src/css/common.css
@@ -297,6 +297,12 @@ input:focus {
     border: 0;
     text-decoration: none;
     cursor: pointer;
+
+    padding: 0;
+    margin: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 
 .link:hover {
