--- a/src/css/components/Header.css
+++ b/src/css/components/Header.css
@@ -1,7 +1,7 @@
 .header {
     height: 120px;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.15);
-    padding: 0 70px;
+    padding: 0 35px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -14,6 +14,9 @@
 }
 
 .menu-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border: 0;
     background-color: transparent;
     color: var(--color-primary-green);
@@ -24,6 +27,12 @@
 
 .menu-btn .material-icons {
     font-size: 26px;
+}
+
+@media (min-width:601px) {
+    .header {
+        padding: 0 70px;
+    }
 }
 
 /* --------------------------- navigation desktop --------------------------- */
@@ -57,6 +66,11 @@
 .nav-items-desktop .nav-item-list :nth-child(1)>*,
 .nav-item {
     margin: 0 8px;
+
+}
+
+.nav-items-desktop .nav-item .sign-in-text>* {
+    display: inline;
 }
 
 /* -------------------------- header type new user -------------------------- */
