--- a/src/css/common.css
+++ b/src/css/common.css
@@ -118,7 +118,6 @@
     font-size: 16px;
     line-height: 40px;
     text-align: center;
-    text-transform: uppercase;
     text-decoration: none;
     cursor: pointer;
 
@@ -221,6 +220,42 @@
     }
 }
 
+/* -------------------------------------------------------------------------- */
+/*                                   modals                                   */
+/* -------------------------------------------------------------------------- */
+
+.modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 90vw;
+    transform: translate(-50%, -50%);
+    padding: 25px;
+    overflow: auto;
+    outline: none;
+    background: #FFFFFF;    
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+}
+
+.modal-overlay {
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.25);
+}
+
+.modal-no-overlay {
+    background-color: transparent;
+}
+
+.modal-footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
 /* -------------------------------------------------------------------------- */
 /*                                    forms                                   */
@@ -380,7 +415,7 @@ input:focus {
     opacity: 0.8;
 }
 
-.location-img-container.no-interact a{
+.location-img-container.no-interact a {
     cursor: default;
 }
 
