--- a/src/css/common.css
+++ b/src/css/common.css
@@ -340,10 +340,6 @@ input:focus {
 }
 
 .form-footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 8px 0;
 }
 
 .link {
@@ -358,10 +354,11 @@ input:focus {
 
     padding: 0;
     margin: 0;
-    display: block;
-    width: 100%;
     height: 100%;
 }
+
+/* display: block;
+width: 100%; */
 
 .link:hover {
     opacity: 0.8;
