--- a/src/css/pages/SignupPage.css
+++ b/src/css/pages/SignupPage.css
@@ -2,32 +2,32 @@
     align-self: center;
 }
 
-.signup {
+.layout-brand {
     display: flex;
 }
 
-.signup-left-half {
+.layout-brand-left-half {
     margin: 0 auto;
     padding: 64px 34px;
 }
 
-.signup-right-half {
+.layout-brand-right-half {
     display: none;
 }
 
 @media (min-width: 601px) {
-    .signup {
+    .layout-brand {
         overflow-y: none;
     }
 
-    .signup-right-half {
+    .layout-brand-right-half {
         display: block;
         flex: 50%;
     }
 }
 
 @media (min-width:992px) {
-    .signup-left-half {
+    .layout-brand-left-half {
         flex: 50%;
         padding: 48px 88px;
     }
