--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,30 @@ html {
 button {
   font-family: inherit;
 }
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 60px;
+  padding: 0 16px;
+
+  font-family: inherit;
+
+  background-color: var(--color-primary-green);
+  box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.15);
+  border-radius: 0px;
+  color: #fff;
+}
+
+.footer .brand-name {
+  font-size: 16px;
+  font-weight: bold;
+  letter-spacing: 1.5px;
+}
+
+@media (min-width:992px){
+  .footer{
+    padding: 0 72px;
+  }
+}
