--- a/src/css/common.css
+++ b/src/css/common.css
@@ -125,6 +125,14 @@
     display: inline-block;
 }
 
+.btn:hover {
+    opacity: 0.5;
+}
+.btn:disabled{
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
 .btn-outline {
     background-color: transparent;
     border: 1px solid var(--color-primary-green);
@@ -165,10 +173,6 @@
 .btn-circle .material-icons {
     font-size: 32px;
     color: #fff;
-}
-
-.btn:hover {
-    opacity: 0.5;
 }
 
 .btn-edit {
