--- a/src/css/common.css
+++ b/src/css/common.css
@@ -321,7 +321,7 @@ input {
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
-    line-height: 14px;
+    line-height: 38px;
     height: 38px;
     border: 0;
     border-bottom: 1px solid rgba(0, 0, 0, 0.42);
@@ -341,7 +341,7 @@ input:focus {
 
 .input {
     width: 100%;
-    padding: 16px 12px;
+    padding: 0 12px;
 }
 
 .input-border {
