--- a/src/css/pages/AddLocationPage.css
+++ b/src/css/pages/AddLocationPage.css
@@ -15,7 +15,7 @@
 .add-location-page .pick-image img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .add-location-page .btn-container {
