style error distance and guess button

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 
-.geoapify-autocomplete-input {
+.c-autocomplete .geoapify-autocomplete-input {
   @apply inline-block w-full rounded-md focus:bg-patina-200 focus:placeholder-gray-500;
 }
 
